[LB-53] Add support for environment variable management
